--- a/WebStore/WebStore/appsettings.json
+++ b/WebStore/WebStore/appsettings.json
@@ -2,7 +2,7 @@
   "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false",
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=DESKTOP-8QU52NL\\SQLEXPRESS;Initial Catalog=ClothingStore;Integrated Security=True;Encrypt=True"
-    "DefaultConnection": "Data Source=.;Initial Catalog=ClothingStore;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-8QU52NL\\SQLEXPRESS;Initial Catalog=ClothingStore;Integrated Security=True;Encrypt=True"
   },
 
  "Jwt": {
@@ -15,7 +15,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Swashbuckle.AspNetCore": "Error" // Tắt log Swagger
     }
   },
   "AllowedHosts": "*"
